RESOLVED FIXED268473
Explicitly invalidate grant for locked files
https://bugs.webkit.org/show_bug.cgi?id=268473
Summary Explicitly invalidate grant for locked files
Per Arne Vollan
Reported 2024-01-31 09:00:22 PST
Explicitly invalidate grant for locked files in the Networking process.
Attachments
Per Arne Vollan
Comment 1 2024-01-31 09:00:47 PST
Per Arne Vollan
Comment 2 2024-01-31 09:09:03 PST
EWS
Comment 3 2024-01-31 15:21:10 PST
Committed 273865@main (990d138133d5): <https://commits.webkit.org/273865@main> Reviewed commits have been landed. Closing PR #23592 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.