Source/WebKit/NetworkProcess/cocoa/NetworkProcessCocoa.mm
@@ -259,6 +259,7 @@ void NetworkProcess::setProxyConfigData(PAL::SessionID sessionID, Vector<std::pa
 #if USE(RUNNINGBOARD) && USE(EXTENSIONKIT)
 bool NetworkProcess::acquireLockedFileGrant()
 {
+    [m_holdingLockedFileGrant invalidateGrant];
     m_holdingLockedFileGrant = [WKProcessExtension.sharedInstance grant:@"com.apple.common" name:@"FinishTaskInterruptable"];
     if (m_holdingLockedFileGrant)
         RELEASE_LOG(Process, "Successfully took assertion on Network process for locked file.");
@@ -272,6 +273,7 @@ void NetworkProcess::invalidateGrant()
     if (!hasAcquiredGrant())
         return;
 
+    [m_holdingLockedFileGrant invalidateGrant];
     m_holdingLockedFileGrant = nil;
 }
 
